<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Keyrings</string>
    <string name="passwords">Passwords</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="no_items">No items in this keyring.</string>
    <string name="enter_pass_title">Enter keyring password</string>
    <string name="enter_pass">Keyring %s is locked. Please, enter the password for it:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="wrong_password">Wrong password</string>
    <string name="show_password">Show password</string>
    <string name="secret_copied">Password copied to clipboard</string>
    <string name="add_keyring">Add keyring</string>
    <string name="add_password">Add password</string>
    <string name="remove_keyring">Remove keyring</string>
    <string name="rename_keyring">Rename keyring</string>
    <string name="change_keyring_password">Change keyring password</string>
    <string name="changing_keyring_password">Changing %s password</string>
    <string name="enter_current_keyring_password">Enter current password for keyring</string>
    <string name="title_activity_keyring_add">Add keyring</string>
    <string name="input_keyring_name">Keyring name:</string>
    <string name="input_keyring_password">Keyring password (leave blank for non encrypted keyring):</string>
    <string name="input_new_keyring_password">New keyring password (leave blank for non encrypted keyring):</string>
    <string name="input_confirm_keyring_password">Confirm password:</string>
    <string name="message_no_name">Please, fill keyring name first.</string>
    <string name="message_password_different">Passwords not matching.</string>
    <string name="dialog_title_error">Unable to create keyring.</string>
    <string name="dialog_message_error">Error occurred while creating keyring.</string>
    <string name="copy">Copy</string>
    <string name="description">Description</string>
    <string name="password">Password</string>
    <string name="password_save_error">Unable to save password into keyring.</string>
    <string name="delete">Delete</string>
</resources>